# aehmc

./: .flake8  .gitattributes  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  conftest.py  environment.yml  example-termination-bjx.py  example-termination.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi.yml  python-tests.yml  test.yml
aehmc/: __init__.py  _version.py  algorithms.py  hmc.py  integrators.py  mass_matrix.py  metrics.py  nuts.py  proposals.py  step_size.py  termination.py  trajectory.py  utils.py  window_adaptation.py
aesara_hmc/: _version.py  integrators.py  metrics.py  trajectory.py
examples/: GettingStarted.ipynb  HMC.ipynb  LinearRegression.ipynb  LogisticRegression.ipynb  requirements.txt
tests/: test_adaptation.py  test_algorithms.py  test_hmc.py  test_integrators.py  test_mass_matrix.py  test_metrics.py  test_numba.py  test_step_size.py  test_termination.py  test_trajectory.py  test_utils.py
